--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "jquery-kivasort",
   "version": "1.1.0",
   "description": "KivaSort is a simple JQuery plugin which uses the Kiva API to get information on all of the Kiva field partners, and then uses the DataTables JQuery Plugin to wrap the data in a dynamic sortable and filterable table.",
+  "dependencies": {
+    "datatables": "~1.10.0"
+  },
+  "optionalDependencies": {
+    "jquery": "^2.2.0",
+    "jsdom": "^7.2.2",
+    "uglify-js": "^2.6.1",
+    "xmlhttprequest": "^1.8.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
