fetchkivajson: Upgrade jsdom and use jsdom XMLHttpRequest

--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   },
   "optionalDependencies": {
     "jquery": "^3.5.0",
-    "jsdom": "^16.5.0",
-    "uglify-js": "^2.6.1",
-    "xmlhttprequest": "^1.8.0"
+    "jsdom": "^26.1.0",
+    "uglify-js": "^2.6.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
